<resources>
    <string name="app_name">countryFlags</string>
    <string name="italy">Italy</string>
    <string name="madagascar">Madagascar</string>
    <string name="poland">Poland</string>
    <string name="colombia">Colombia</string>
    <string name="austria">Austria</string>
    <string name="thailand">Thailand</string>
    <string name="denmark">Denmark</string>
    <string name="switzerland">Switzerland</string>
</resources>