<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8E4EC"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/aus1"
                android:layout_width="240dp"
                android:layout_height="53dp"
                android:src="#C1372C"/>

            <ImageView
                android:id="@+id/aus2"
                android:layout_width="240dp"
                android:layout_height="53dp"
                android:layout_below="@id/aus1"
                android:src="@color/white"/>

            <ImageView
                android:id="@+id/aus3"
                android:layout_width="240dp"
                android:layout_height="53dp"
                android:layout_below="@id/aus2"
                android:src="#C1372C"/>

            <TextView
                android:id="@+id/aus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aus3"
                android:text="@string/austria"
                android:textColor="#3F51B5"
                android:textSize="28sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/pol1"
                android:layout_width="240dp"
                android:layout_height="80dp"
                android:layout_below="@id/aus"
                android:layout_marginTop="48dp"
                android:src="@color/white"/>

            <ImageView
                android:id="@+id/pol2"
                android:layout_width="240dp"
                android:layout_height="80dp"
                android:layout_below="@id/pol1"
                android:src="#E41F11"/>

            <TextView
                android:id="@+id/pol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pol2"
                android:text="@string/poland"
                android:textColor="#3F51B5"
                android:textSize="28sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/ital1"
                android:layout_width="80dp"
                android:layout_height="160dp"
                android:layout_below="@id/pol"
                android:layout_marginTop="48dp"
                android:src="#179E1D"/>

            <ImageView
                android:id="@+id/ital2"
                android:layout_width="80dp"
                android:layout_height="160dp"
                android:layout_below="@id/pol"
                android:layout_marginTop="48dp"
                android:layout_toEndOf="@id/ital1"
                android:src="@color/white"/>

            <ImageView
                android:id="@+id/ital3"
                android:layout_width="80dp"
                android:layout_height="160dp"
                android:layout_below="@id/pol"
                android:layout_marginTop="48dp"
                android:layout_toEndOf="@id/ital2"
                android:src="#E41F11"/>

            <TextView
                android:id="@+id/ital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ital1"
                android:text="@string/italy"
                android:textColor="#3F51B5"
                android:textSize="28sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/col1"
                android:layout_width="240dp"
                android:layout_height="80dp"
                android:layout_below="@id/ital"
                android:layout_marginTop="48dp"
                android:src="#FBBD00"/>

            <ImageView
                android:id="@+id/col2"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_below="@id/col1"
                android:src="#1129AC"/>


            <ImageView
                android:id="@+id/col3"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_below="@id/col2"
                android:src="#B10F04"/>

            <TextView
                android:id="@+id/col"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/col3"
                android:text="@string/colombia"
                android:textColor="#3F51B5"
                android:textSize="28sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/mad1"
                android:layout_width="80dp"
                android:layout_height="160dp"
                android:layout_below="@id/col"
                android:layout_marginTop="48dp"
                android:src="@color/white"/>


            <ImageView
                android:id="@+id/mad2"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_below="@id/col"
                android:layout_marginTop="48dp"
                android:layout_toEndOf="@id/mad1"
                android:src="#EC574C"/>


            <ImageView
                android:id="@+id/mad3"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_below="@id/mad2"
                android:layout_toEndOf="@id/mad1"
                android:src="#1D8F22"/>

            <TextView
                android:id="@+id/mad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mad1"
                android:text="@string/madagascar"
                android:textColor="#3F51B5"
                android:textSize="28sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/thai1"
                android:layout_width="240dp"
                android:layout_height="27dp"
                android:layout_below="@id/mad"
                android:layout_marginTop="48dp"
                android:src="#DC0202"/>


            <ImageView
                android:id="@+id/thai2"
                android:layout_width="240dp"
                android:layout_height="26dp"
                android:layout_below="@id/thai1"
                android:src="@color/white"/>


            <ImageView
                android:id="@+id/thai3"
                android:layout_width="240dp"
                android:layout_height="54dp"
                android:layout_below="@id/thai2"
                android:src="#012787" />

            <ImageView
                android:id="@+id/thai4"
                android:layout_width="240dp"
                android:layout_height="26dp"
                android:layout_below="@id/thai3"
                android:src="@color/white"/>
            <ImageView
                android:id="@+id/thai5"
                android:layout_width="240dp"
                android:layout_height="27dp"
                android:layout_below="@id/thai4"
                android:src="#DC0202"/>

            <TextView
                android:id="@+id/thai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/thai5"
                android:text="@string/thailand"
                android:textColor="#3F51B5"
                android:textSize="28sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/den1"
                android:layout_width="240dp"
                android:layout_height="160dp"
                android:layout_below="@id/thai"
                android:layout_marginTop="48dp"
                android:src="#F83C3C"/>

            <ImageView
                android:id="@+id/den2"
                android:layout_width="240dp"
                android:layout_height="20dp"
                android:layout_alignTop="@id/den1"
                android:layout_marginTop="70dp"
                android:src="@color/white"/>

            <ImageView
                android:id="@+id/den3"
                android:layout_width="20dp"
                android:layout_height="160dp"
                android:layout_alignStart="@id/den1"
                android:layout_alignTop="@id/den1"
                android:layout_marginStart="70dp"
                android:src="@color/white" />

            <TextView
                android:id="@+id/den"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/den1"
                android:text="@string/denmark"
                android:textColor="#3F51B5"
                android:textSize="28sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/sw1"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_below="@id/den"
                android:layout_marginTop="48dp"
                android:src="#F60A0A"/>

            <ImageView
                android:id="@+id/sw2"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignTop="@id/sw1"
                android:layout_marginTop="60dp"
                android:layout_alignStart="@id/sw1"
                android:layout_marginStart="30dp"
                android:src="@color/white"/>

            <ImageView
                android:id="@+id/sw3"
                android:layout_width="40dp"
                android:layout_height="120dp"
                android:layout_alignTop="@id/sw1"
                android:layout_marginTop="20dp"
                android:layout_alignStart="@id/sw1"
                android:layout_marginStart="70dp"
                android:src="@color/white" />

            <TextView
                android:id="@+id/sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sw1"
                android:text="@string/switzerland"
                android:textColor="#3F51B5"
                android:textSize="28sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

